# common-parlance

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVENANT.md  LICENSE  LICENSE-DATASET  NOTICE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  pyproject.toml  test_e2e.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  content_report.yml
.github/workflows/: ci.yml
benchmark/: README.md  RESULTS.md  score.py  score_thestack.py
corpus/: SCHEMA.md  manifest.json
corpus/cases/: code-identifier-guards.jsonl  entropy-tokens.jsonl  ner-locations.jsonl  ner-names.jsonl  paths-and-urls.jsonl  realcode-guards.jsonl  secret-structural.jsonl  structured-pii.jsonl  unicode-evasion.jsonl  vendor-prefixed-secrets.jsonl
docs/: dataset_card.md  deployment.md  design.md  ingestion_design.md
ner-service/: Dockerfile  README.md  app.py
scripts/: regen_roundtrip_fixture.py  regen_stopwords.py  tag-release.sh
src/common_parlance/: __init__.py  _stopwords.py  audit.py  autostart.py  cli.py  config.py  consent.py  db.py  extract.py  filter.py  filter_ml.py  importers.py  lang.py  process.py  proxy.py  scrub.py  upload.py  watcher.py
src/common_parlance/blocklists/: csam_indicator.txt  dangerous_instructions.txt
src/common_parlance/commands/: __init__.py  _shared.py  audit_cmd.py  config_cmd.py  consent_cmd.py  dead_letters.py  import_cmd.py  process.py  proxy.py  register.py  review.py  startup.py  status.py  upload.py
tests/: golden_corpus.py  test_audit.py  test_cli.py  test_config.py  test_consent.py  test_db.py  test_extract.py  test_filter.py  test_filter_parity.py  test_golden_corpus.py  test_golden_corpus_ner.py  test_importers.py  test_lang.py  test_ner_service.py  test_pattern_inventory_parity.py  test_pipeline.py  test_process.py  test_proxy.py  test_roundtrip_fixture.py  test_scrub.py  test_scrub_ner.py  test_stopwords_parity.py  test_upload.py  test_watcher.py
tests/fixtures/: sample_messages.jsonl
worker/: package-lock.json  package.json  vitest.config.ts  wrangler.toml
worker/src/: content-filter.js  content-filter.test.js  helpers.js  helpers.test.js  index.js  registration.js  stopwords.js  upload-validate.test.js  upload.js  upload.test.js
worker/test/: corpus-loader.js  golden-corpus.test.js  helpers.ts  registration.test.ts  roundtrip-pii.test.js  scheduled.test.ts  upload.test.ts
worker/test/fixtures/: scrubbed_corpus.json
