[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-parlance"
version = "0.1.0"
description = "Privacy-preserving proxy for contributing local AI conversations to an open training commons"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["ai", "llm", "dataset", "privacy", "pii", "proxy", "ollama", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
fasttext = ["fasttext-numpy2-wheel>=0.9.2"]
ner = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]
ml = ["detoxify>=0.5.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
common-parlance = "common_parlance.cli:main"

[project.urls]
Homepage = "https://github.com/common-parlance/common-parlance"
Repository = "https://github.com/common-parlance/common-parlance"
Issues = "https://github.com/common-parlance/common-parlance/issues"
Dataset = "https://huggingface.co/datasets/common-parlance/conversations"

[tool.hatch.build.targets.wheel]
packages = ["src/common_parlance"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["common_parlance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
